@@ -11,8 +11,10 @@ import static org.folio.dao.util.RecordDaoUtil.ensureRecordHasSuppressDiscovery;
 import static org.folio.dao.util.RecordDaoUtil.filterRecordByExternalHridValues;
 import static org.folio.dao.util.RecordDaoUtil.filterRecordByState;
 import static org.folio.dao.util.RecordDaoUtil.getExternalIdsCondition;
+import static org.folio.dao.util.RecordDaoUtil.getExternalIdType;
 import static org.folio.dao.util.SnapshotDaoUtil.SNAPSHOT_NOT_FOUND_TEMPLATE;
 import static org.folio.dao.util.SnapshotDaoUtil.SNAPSHOT_NOT_STARTED_MESSAGE_TEMPLATE;
+import static org.folio.rest.util.OkapiConnectionParams.OKAPI_TENANT_HEADER;
 import static org.folio.rest.util.QueryParamUtil.toRecordType;
 import static org.folio.services.util.AdditionalFieldsUtil.TAG_999;
 import static org.folio.services.util.AdditionalFieldsUtil.addFieldToMarcRecord;
@@ -23,12 +25,14 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.concurrent.ExecutionException;
 import javax.ws.rs.BadRequestException;
 import javax.ws.rs.NotFoundException;
+import org.apache.commons.collections4.CollectionUtils;
 
 import io.reactivex.Flowable;
 import io.vertx.core.AsyncResult;
@@ -75,6 +79,8 @@ import org.folio.rest.jaxrs.model.SourceRecord;
 import org.folio.rest.jaxrs.model.SourceRecordCollection;
 import org.folio.rest.jaxrs.model.StrippedParsedRecordCollection;
 import org.folio.rest.jooq.enums.RecordState;
+import org.folio.services.entities.RecordsModifierOperator;
+import org.folio.services.exceptions.RecordUpdateException;
 import org.folio.services.util.parser.ParseFieldsResult;
 import org.folio.services.util.parser.ParseLeaderResult;
 import org.folio.services.util.parser.SearchExpressionParser;
@@ -166,6 +172,42 @@ public class RecordServiceImpl implements RecordService {
         recordDao.saveRecords(recordCollection, tenantId)
         : Future.failedFuture(ar.cause()))
       .recover(RecordServiceImpl::mapToDuplicateExceptionIfNeeded);
+  }
+
+  @Override
+  public Future<RecordsBatchResponse> saveRecordsByExternalIds(List<String> externalIds,
+                                                               RecordType recordType,
+                                                               RecordsModifierOperator recordsModifier,
+                                                               Map<String, String> okapiHeaders) {
+    if (CollectionUtils.isEmpty(externalIds)) {
+      LOG.warn("saveRecordsByExternalIds:: Skipping the records save, no external IDs are provided");
+      return Future.succeededFuture(new RecordsBatchResponse().withTotalRecords(0));
+    }
+
+    if (recordsModifier == null) {
+      LOG.warn("saveRecordsByExternalIds:: Skipping the records save, no operator is provided to modify the existing records");
+      return Future.succeededFuture(new RecordsBatchResponse().withTotalRecords(0));
+    }
+
+    RecordsModifierOperator recordsMatchedIdsSetter = recordCollection -> {
+      try {
+        for (var sourceRecord : recordCollection.getRecords()) {
+          setMatchedIdForRecord(sourceRecord, okapiHeaders.get(OKAPI_TENANT_HEADER))
+            .toCompletionStage().toCompletableFuture().get();
+        }
+        return recordCollection;
+      } catch (InterruptedException ex) {
+        LOG.warn("saveRecordsByExternalIds:: Setting record matched id is interrupted: {}", ex.getMessage());
+        Thread.currentThread().interrupt();
+        throw new RecordUpdateException(ex.getMessage());
+      } catch (ExecutionException ex) {
+        LOG.warn("saveRecordsByExternalIds:: Failed to set record matched id: {}", ex.getMessage());
+        throw new RecordUpdateException(ex.getMessage());
+      }
+    };
+    RecordsModifierOperator recordsModifierWithMatchedIdsSetter = recordsModifier.andThen(recordsMatchedIdsSetter);
+
+    return recordDao.saveRecordsByExternalIds(externalIds, recordType, recordsModifierWithMatchedIdsSetter, okapiHeaders);
   }
 
   @Override
@@ -352,7 +394,7 @@ public class RecordServiceImpl implements RecordService {
     }
     Promise<Record> promise = Promise.promise();
     String externalId = RecordDaoUtil.getExternalId(record.getExternalIdsHolder(), record.getRecordType());
-    IdType idType = RecordDaoUtil.getExternalIdType(record.getRecordType());
+    IdType idType = getExternalIdType(record.getRecordType());
 
     if (externalId != null && idType != null && record.getState() == Record.State.ACTUAL) {
       setMatchedIdFromExistingSourceRecord(record, tenantId, promise, externalId, idType);
@@ -424,7 +466,7 @@ public class RecordServiceImpl implements RecordService {
             .map(JsonObject.class::cast)
             .filter(field -> checkFieldRange(field, data))
             .map(JsonObject::getMap)
-            .collect(Collectors.toList());
+            .toList();
 
           parsedContent.put("fields", filteredFields);
           recordToFilter.getParsedRecord().setContent(parsedContent.getMap());
